fixed overflow on swooshs

--- a/index2.css
+++ b/index2.css
@@ -211,6 +211,7 @@ Background CSS
 	width: 100%;
 	height: 100%;
 	min-height: 700px;
+	overflow-x: hidden;
 }
 
 .background-container
@@ -841,6 +842,7 @@ Details Page CSS
 	width: 100%;
 	height: 100%;
 	min-height: 700px;
+	overflow-x: hidden;
 }
 
 @media only screen and (max-width: 420px) {
